--- a/FYPPacketSniffer/app/src/main/res/values/strings.xml
+++ b/FYPPacketSniffer/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">PacketSniffer</string>
+    <string name="app_name">Network Sniffer</string>
     
     <string name="nav_drawer_open">Open Navigation Drawer</string>
     <string name="nav_drawer_close">Close Navigation Drawer</string>
