--- a/FYPPacketSniffer/app/src/main/res/values/strings.xml
+++ b/FYPPacketSniffer/app/src/main/res/values/strings.xml
@@ -11,6 +11,17 @@
     <string name="filter_6">TCP Packets</string>
     <string name="filter_7">UDP Packets</string>
     <string name="filter_8">ICMP Packets</string>
+    <string name="filter_9">ARP Packets</string>
     <string name="select_file">Select File</string>
+    <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="activity_button">Launch</string>
+    <string name="no_connectivity">No connectivity</string>
+    <string name="no_text">Please enter an ip or URL</string>
+    <string name="no_ping">Are you sure about the URL?</string>
+    <string name="string_test">test</string>
+    <string name="error">An error occurred, please try again</string>
+    <string name="timeout">Timeout</string>
+    <string name="placeholder">www.google.fr</string>
 
 </resources>
