--- a/FYPPacketSniffer/app/src/main/res/values/strings.xml
+++ b/FYPPacketSniffer/app/src/main/res/values/strings.xml
@@ -65,7 +65,7 @@
         Traceroute for Linux under License GPL v2 or any later\n
         Copyright(c) 2016 Dimitry Butskoy\n\n
         Aircrack-ng 1.2 rc4\n
-        (C) 2006-2015 Thomas d'Otreppe\n\n
+        (C) 2006-2015 Thomas d\'Otreppe\n\n
     </string>
 
 </resources>
